force-app/main/default/objects/Servicio_Vendido__c/Servicio_Vendido__c.object-meta.xml
<CustomObject>
    <label>Servicio Vendido</label>
    <nameField>
        <label>Servicios Vendidos Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Servicios Vendidos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>