force-app/main/default/objects/Servicio_Vendido__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Servicios Vendidos</relationshipLabel>
    <relationshipName>Servicios_Vendidos</relationshipName>
    <type>Lookup</type>
</CustomField>