force-app/main/default/objects/Servicio_Vendido__c/fields/Factura__c.field-meta.xml
<CustomField>
    <fullName>Factura__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factura</label>
    <referenceTo>Factura__c</referenceTo>
    <relationshipLabel>Servicios Vendidos</relationshipLabel>
    <relationshipName>Servicios_Vendidos</relationshipName>
    <type>Lookup</type>
</CustomField>